packages/delta_ffi/headers/deltachat.h

typedef struct dc_context dc_context_t;
typedef struct dc_event_emitter dc_event_emitter_t;
typedef struct dc_accounts dc_accounts_t;
typedef struct dc_array dc_array_t;
dc_accounts_t* dc_accounts_new(const char* dir, int32_t writable);
void dc_accounts_unref(dc_accounts_t* accounts);
uint32_t dc_accounts_add_account(dc_accounts_t* accounts);
uint32_t dc_accounts_add_closed_account(dc_accounts_t* accounts);
uint32_t dc_accounts_migrate_account(dc_accounts_t* accounts, const char* dbfile);
int32_t dc_accounts_remove_account(dc_accounts_t* accounts, uint32_t account_id);
dc_array_t* dc_accounts_get_all(dc_accounts_t* accounts);
dc_context_t* dc_accounts_get_account(dc_accounts_t* accounts, uint32_t account_id);
void dc_accounts_start_io(dc_accounts_t* accounts);
void dc_accounts_stop_io(dc_accounts_t* accounts);
void dc_accounts_maybe_network(dc_accounts_t* accounts);
void dc_accounts_maybe_network_lost(dc_accounts_t* accounts);
int dc_accounts_background_fetch(dc_accounts_t* accounts, uint64_t timeout);
void dc_accounts_set_push_device_token(
    dc_accounts_t* accounts,
    const char* token);
dc_event_emitter_t* dc_accounts_get_event_emitter(dc_accounts_t* accounts);
dc_context_t* dc_context_new(const char* os_name, const char* dbfile, const char* blobdir);
dc_context_t* dc_context_new_closed(const char* dbfile);
void dc_context_unref(dc_context_t* ctx);
int32_t dc_context_open(dc_context_t* ctx, const char* passphrase);
int32_t dc_context_change_passphrase(dc_context_t* ctx, const char* passphrase);
int32_t dc_context_is_open(dc_context_t* ctx);
int32_t dc_is_configured(dc_context_t* ctx);
void dc_configure(dc_context_t* ctx);