packages/delta_ffi/lib/src/bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Auto-generated bindings for Delta Chat Core.
class DeltaChatBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  DeltaChatBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  DeltaChatBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<dc_accounts_t> dc_accounts_new(
    ffi.Pointer<ffi.Char> dir,
    int writable,
  ) {
    return _dc_accounts_new(
      dir,
      writable,
    );
  }

  late final _dc_accounts_newPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_accounts_t> Function(
              ffi.Pointer<ffi.Char>, ffi.Int32)>>('dc_accounts_new');
  late final _dc_accounts_new = _dc_accounts_newPtr.asFunction<
      ffi.Pointer<dc_accounts_t> Function(ffi.Pointer<ffi.Char>, int)>();

  void dc_accounts_unref(
    ffi.Pointer<dc_accounts_t> accounts,
  ) {
    return _dc_accounts_unref(
      accounts,
    );
  }

  late final _dc_accounts_unrefPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_accounts_t>)>>(
      'dc_accounts_unref');
  late final _dc_accounts_unref = _dc_accounts_unrefPtr
      .asFunction<void Function(ffi.Pointer<dc_accounts_t>)>();

  int dc_accounts_add_account(
    ffi.Pointer<dc_accounts_t> accounts,
  ) {
    return _dc_accounts_add_account(
      accounts,
    );
  }

  late final _dc_accounts_add_accountPtr = _lookup<
          ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<dc_accounts_t>)>>(
      'dc_accounts_add_account');
  late final _dc_accounts_add_account = _dc_accounts_add_accountPtr
      .asFunction<int Function(ffi.Pointer<dc_accounts_t>)>();

  int dc_accounts_add_closed_account(
    ffi.Pointer<dc_accounts_t> accounts,
  ) {
    return _dc_accounts_add_closed_account(
      accounts,
    );
  }

  late final _dc_accounts_add_closed_accountPtr = _lookup<
          ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<dc_accounts_t>)>>(
      'dc_accounts_add_closed_account');
  late final _dc_accounts_add_closed_account =
      _dc_accounts_add_closed_accountPtr
          .asFunction<int Function(ffi.Pointer<dc_accounts_t>)>();

  int dc_accounts_migrate_account(
    ffi.Pointer<dc_accounts_t> accounts,
    ffi.Pointer<ffi.Char> dbfile,
  ) {
    return _dc_accounts_migrate_account(
      accounts,
      dbfile,
    );
  }

  late final _dc_accounts_migrate_accountPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<dc_accounts_t>,
              ffi.Pointer<ffi.Char>)>>('dc_accounts_migrate_account');
  late final _dc_accounts_migrate_account =
      _dc_accounts_migrate_accountPtr.asFunction<
          int Function(ffi.Pointer<dc_accounts_t>, ffi.Pointer<ffi.Char>)>();

  int dc_accounts_remove_account(
    ffi.Pointer<dc_accounts_t> accounts,
    int account_id,
  ) {
    return _dc_accounts_remove_account(
      accounts,
      account_id,
    );
  }

  late final _dc_accounts_remove_accountPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<dc_accounts_t>,
              ffi.Uint32)>>('dc_accounts_remove_account');
  late final _dc_accounts_remove_account = _dc_accounts_remove_accountPtr
      .asFunction<int Function(ffi.Pointer<dc_accounts_t>, int)>();

  ffi.Pointer<dc_array_t> dc_accounts_get_all(
    ffi.Pointer<dc_accounts_t> accounts,
  ) {
    return _dc_accounts_get_all(
      accounts,
    );
  }

  late final _dc_accounts_get_allPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_array_t> Function(
              ffi.Pointer<dc_accounts_t>)>>('dc_accounts_get_all');
  late final _dc_accounts_get_all = _dc_accounts_get_allPtr.asFunction<
      ffi.Pointer<dc_array_t> Function(ffi.Pointer<dc_accounts_t>)>();

  ffi.Pointer<dc_context_t> dc_accounts_get_account(
    ffi.Pointer<dc_accounts_t> accounts,
    int account_id,
  ) {
    return _dc_accounts_get_account(
      accounts,
      account_id,
    );
  }

  late final _dc_accounts_get_accountPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_context_t> Function(ffi.Pointer<dc_accounts_t>,
              ffi.Uint32)>>('dc_accounts_get_account');
  late final _dc_accounts_get_account = _dc_accounts_get_accountPtr.asFunction<
      ffi.Pointer<dc_context_t> Function(ffi.Pointer<dc_accounts_t>, int)>();

  void dc_accounts_start_io(
    ffi.Pointer<dc_accounts_t> accounts,
  ) {
    return _dc_accounts_start_io(
      accounts,
    );
  }

  late final _dc_accounts_start_ioPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_accounts_t>)>>(
      'dc_accounts_start_io');
  late final _dc_accounts_start_io = _dc_accounts_start_ioPtr
      .asFunction<void Function(ffi.Pointer<dc_accounts_t>)>();

  void dc_accounts_stop_io(
    ffi.Pointer<dc_accounts_t> accounts,
  ) {
    return _dc_accounts_stop_io(
      accounts,
    );
  }

  late final _dc_accounts_stop_ioPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_accounts_t>)>>(
      'dc_accounts_stop_io');
  late final _dc_accounts_stop_io = _dc_accounts_stop_ioPtr
      .asFunction<void Function(ffi.Pointer<dc_accounts_t>)>();

  void dc_accounts_maybe_network(
    ffi.Pointer<dc_accounts_t> accounts,
  ) {
    return _dc_accounts_maybe_network(
      accounts,
    );
  }

  late final _dc_accounts_maybe_networkPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_accounts_t>)>>(
      'dc_accounts_maybe_network');
  late final _dc_accounts_maybe_network = _dc_accounts_maybe_networkPtr
      .asFunction<void Function(ffi.Pointer<dc_accounts_t>)>();

  void dc_accounts_maybe_network_lost(
    ffi.Pointer<dc_accounts_t> accounts,
  ) {
    return _dc_accounts_maybe_network_lost(
      accounts,
    );
  }

  late final _dc_accounts_maybe_network_lostPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_accounts_t>)>>(
      'dc_accounts_maybe_network_lost');
  late final _dc_accounts_maybe_network_lost =
      _dc_accounts_maybe_network_lostPtr
          .asFunction<void Function(ffi.Pointer<dc_accounts_t>)>();

  int dc_accounts_background_fetch(
    ffi.Pointer<dc_accounts_t> accounts,
    int timeout,
  ) {
    return _dc_accounts_background_fetch(
      accounts,
      timeout,
    );
  }

  late final _dc_accounts_background_fetchPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<dc_accounts_t>,
              ffi.Uint64)>>('dc_accounts_background_fetch');
  late final _dc_accounts_background_fetch = _dc_accounts_background_fetchPtr
      .asFunction<int Function(ffi.Pointer<dc_accounts_t>, int)>();

  void dc_accounts_set_push_device_token(
    ffi.Pointer<dc_accounts_t> accounts,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _dc_accounts_set_push_device_token(
      accounts,
      token,
    );
  }

  late final _dc_accounts_set_push_device_tokenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<dc_accounts_t>,
              ffi.Pointer<ffi.Char>)>>('dc_accounts_set_push_device_token');
  late final _dc_accounts_set_push_device_token =
      _dc_accounts_set_push_device_tokenPtr.asFunction<
          void Function(ffi.Pointer<dc_accounts_t>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<dc_event_emitter_t> dc_accounts_get_event_emitter(
    ffi.Pointer<dc_accounts_t> accounts,
  ) {
    return _dc_accounts_get_event_emitter(
      accounts,
    );
  }

  late final _dc_accounts_get_event_emitterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_event_emitter_t> Function(
              ffi.Pointer<dc_accounts_t>)>>('dc_accounts_get_event_emitter');
  late final _dc_accounts_get_event_emitter =
      _dc_accounts_get_event_emitterPtr.asFunction<
          ffi.Pointer<dc_event_emitter_t> Function(
              ffi.Pointer<dc_accounts_t>)>();

  ffi.Pointer<dc_context_t> dc_context_new(
    ffi.Pointer<ffi.Char> os_name,
    ffi.Pointer<ffi.Char> dbfile,
    ffi.Pointer<ffi.Char> blobdir,
  ) {
    return _dc_context_new(
      os_name,
      dbfile,
      blobdir,
    );
  }

  late final _dc_context_newPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_context_t> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('dc_context_new');
  late final _dc_context_new = _dc_context_newPtr.asFunction<
      ffi.Pointer<dc_context_t> Function(ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<dc_context_t> dc_context_new_closed(
    ffi.Pointer<ffi.Char> dbfile,
  ) {
    return _dc_context_new_closed(
      dbfile,
    );
  }

  late final _dc_context_new_closedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_context_t> Function(
              ffi.Pointer<ffi.Char>)>>('dc_context_new_closed');
  late final _dc_context_new_closed = _dc_context_new_closedPtr
      .asFunction<ffi.Pointer<dc_context_t> Function(ffi.Pointer<ffi.Char>)>();

  void dc_context_unref(
    ffi.Pointer<dc_context_t> ctx,
  ) {
    return _dc_context_unref(
      ctx,
    );
  }

  late final _dc_context_unrefPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_context_t>)>>(
          'dc_context_unref');
  late final _dc_context_unref = _dc_context_unrefPtr
      .asFunction<void Function(ffi.Pointer<dc_context_t>)>();

  int dc_context_open(
    ffi.Pointer<dc_context_t> ctx,
    ffi.Pointer<ffi.Char> passphrase,
  ) {
    return _dc_context_open(
      ctx,
      passphrase,
    );
  }

  late final _dc_context_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<dc_context_t>,
              ffi.Pointer<ffi.Char>)>>('dc_context_open');
  late final _dc_context_open = _dc_context_openPtr.asFunction<
      int Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Char>)>();

  int dc_context_change_passphrase(
    ffi.Pointer<dc_context_t> ctx,
    ffi.Pointer<ffi.Char> passphrase,
  ) {
    return _dc_context_change_passphrase(
      ctx,
      passphrase,
    );
  }

  late final _dc_context_change_passphrasePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<dc_context_t>,
              ffi.Pointer<ffi.Char>)>>('dc_context_change_passphrase');
  late final _dc_context_change_passphrase =
      _dc_context_change_passphrasePtr.asFunction<
          int Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Char>)>();

  int dc_context_is_open(
    ffi.Pointer<dc_context_t> ctx,
  ) {
    return _dc_context_is_open(
      ctx,
    );
  }

  late final _dc_context_is_openPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_context_t>)>>(
      'dc_context_is_open');
  late final _dc_context_is_open = _dc_context_is_openPtr
      .asFunction<int Function(ffi.Pointer<dc_context_t>)>();

  int dc_is_configured(
    ffi.Pointer<dc_context_t> ctx,
  ) {
    return _dc_is_configured(
      ctx,
    );
  }

  late final _dc_is_configuredPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_context_t>)>>(
      'dc_is_configured');
  late final _dc_is_configured = _dc_is_configuredPtr
      .asFunction<int Function(ffi.Pointer<dc_context_t>)>();

  void dc_configure(
    ffi.Pointer<dc_context_t> ctx,
  ) {
    return _dc_configure(
      ctx,
    );
  }

  late final _dc_configurePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_context_t>)>>(
          'dc_configure');
  late final _dc_configure =
      _dc_configurePtr.asFunction<void Function(ffi.Pointer<dc_context_t>)>();
